--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
-{% extends "bootstrap/base.html"%}
+{% extends "bootstrap/base.html" %}
 
 {% block title %}Flasky{% endblock %}
+
+{% block head %}
+{{ super() }}
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -14,9 +20,9 @@
             </button>
             <a class="navbar-brand" href="/">Flasky</a>
         </div>
-        <div class="navbar-collapse">
+        <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a> </li>
+                <li><a href="/">Home</a></li>
             </ul>
         </div>
     </div>
@@ -24,8 +30,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-    {% block page_content %}
-    {% endblock %}
-    </div>
+<div class="container">
+    {% block page_content %}{% endblock %}
+</div>
 {% endblock %}
+
